app/src/main/java/com/example/rentit/core/error/NotFoundException.kt
package com.example.rentit.core.error

class NotFoundException(message: String? = null): Exception(message)